--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To take a photo</string>
+	<key>NSCameraUsageDescription</key>
+	<string>To take a photo</string>
+	<key>NSMicrophoneUsageDescription</key>
+    <string>To take videos</string>
 </dict>
 </plist>
