--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^6.1.0
+
+  uuid: ^4.2.2
+  flutter_riverpod: ^2.4.9
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
